improved error responses